# scoring_bureau_task

./: CMakeLists.txt  README.md
include/: PingPong.h
src/: PingPong.cpp  PlayGame.cpp
